welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: not found: value y
		setPos(x,y)
                         ^ZigZag:22: error: not found: value y
		setPos(x,y)
                         ^